<resources>
    <string name="app_name">Proyecto1</string>
    <string name="txt_login">Login</string>
    <string name="btn_login_text">Ingresar</string>
    <string name="btn_exit_text">Salir</string>
    <string name="txt_user">User</string>
    <string name="txt_password">Password</string>
    <string name="edtxt_user">Ingrese el Usuario</string>
    <string name="edtxt_password">Ingrese la Clave</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>