<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/kyoto"
    tools:context=".ConstraintActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_login"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/katana"
                app:shapeAppearance="@style/img_shape"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="28dp"
        app:cardBackgroundColor="@color/silver"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_const_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_login"
                    android:textSize="@dimen/txt_name_size_title_1"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/textField" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edtxt_user"
                    app:hintTextColor="@color/hookers_green"
                    app:boxStrokeColor="@color/cerulean"
                    app:layout_constraintTop_toBottomOf="@id/txt_const_login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/edtxt_const_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtxt_const_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_name_size_title_3"
                        app:layout_constraintTop_toBottomOf="@id/txt_const_login"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/edtxt_const_password"/>

                </com.google.android.material.textfield.TextInputLayout>


                <EditText
                    android:id="@+id/edtxt_const_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edtxt_password"
                    android:textSize="@dimen/txt_name_size_title_3"
                    app:layout_constraintTop_toBottomOf="@id/textField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_const_login"/>

                <Button
                    style="@style/btn_login"
                    android:id="@+id/btn_const_login"
                    android:text="@string/btn_login_text"
                    android:drawableLeft="@drawable/login"
                    android:drawableTint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/edtxt_const_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_const_exit"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    style="@style/btn_exit"
                    android:id="@+id/btn_const_exit"
                    android:text="@string/btn_exit_text"
                    android:drawableLeft="@drawable/exit"
                    android:drawableTint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/edtxt_const_password"
                    app:layout_constraintStart_toEndOf="@id/btn_const_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>